--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <!-- footer -->
     <footer>
-
+        <p class="footer">Contact us at: Insert contact details here</p>
     </footer>
 </body>
 </html>
