Moved footer into main and added margin

--- a/index.html
+++ b/index.html
@@ -53,11 +53,12 @@
                     explicabo sed. Ratione dolores blanditiis facilis vero fugit?</p>
             </div>
         </section>
+
+        <!-- footer -->
+        <footer class="footer">
+            <p>Contact us at: Insert contact details here</p>
+        </footer>
     </main>
 
-    <!-- footer -->
-    <footer>
-        <p class="footer">Contact us at: Insert contact details here</p>
-    </footer>
 </body>
 </html>
